--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -6,7 +6,7 @@
 	padding-left: 3rem;
 	align-items: center;
 
-	width: 100vw;
+	width: calc(100vw - 40px);
 	height: 100%;
 
 	.logoSmall {
